# D100_Project

./: .gitignore  .pre-commit-config.yaml  README.md  eda_cleaning.ipynb  environment.yml  pyproject.toml  setup.cfg
analyses/: data_split.py  evaluation.py  min_max.py  model_training.py  unit_test_min_max.py
data/: data_cleaning.py  data_loader.py  plotting.py  preprocessing.py  sample_data.py
raw_data/: cleaned_stratified_diabetes_prediction_dataset.csv  sampled_diabetes_prediction_dataset.csv
