[metadata]
name = d100_project_diabetes               # The name of your package (make it unique)
version = 0.1.0                    # Initial version of your package
description = A Repository for Predicting Diabetes
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.7
install_requires = 
include_package_data = true

[options.packages.find]
include =
    d100_project_diabetes
